--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/LiquorWarehouseStage_1_02/LiquorWarehouseStage_1_02.sqlproj
