Ignoring stuff we should ignore

--- a/.gitignore
+++ b/.gitignore
@@ -261,3 +261,4 @@ __pycache__/
 *.pyc
 /LiquorWarehouseStage_1_02/LiquorWarehouseStage_1_02.sqlproj
 /BrownForman
+/LiquorWarehouseStage_1_0/LiquorWarehouseStage_1_02.sqlproj
